- Modified directory structure to match my own coding style.
- Created my own header (navbar) file for the project.

- Added the following packages to the project:
  - iron:router
  - tabs:bootstrap

- Created a router.js which will eventually handle the app's routing.

- Created the Artists Mongo DB collection.

--- a/recordly-2.css
+++ b/recordly-2.css
@@ -1,1 +1,2 @@
-/* CSS declarations go here */
+/* added the following line to add space between the navbar and the text */
+@media (min-width: 980px) { body { padding-top: 60px; } }
