--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -18,7 +18,7 @@
           <li><a href="#">Songs</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" id="login-screen">
-          <!-- <li class="warning">{{> loginButtons align="right"}}</li> -->
+          <li class="warning">{{> loginButtons align="right"}}</li>
         </ul>
       </div>
       <!--/.nav-collapse -->
