--- a/recordly-2.css
+++ b/recordly-2.css
@@ -1,2 +1,7 @@
 /* added the following line to add space between the navbar and the text */
 @media (min-width: 980px) { body { padding-top: 60px; } }
+
+/* Change the color of the default login buttons due to a dark background. */
+.dropdown-toggle {
+  color: #ffffff !important;
+}
