Created the artist edit page. Created link to the artist edit page in the list view. Connected the edit page to the router.

--- a/client/templates/artists/artist.html
+++ b/client/templates/artists/artist.html
@@ -1,6 +1,6 @@
 <template name="artistDetail">
   <td class="text-primary col-sm-6">
-    <a href="/artistEdit/{{_id}}">{{name}}</a>
+    <a href="{{pathFor 'artistEdit'}}">{{name}}</a>
   </td>
   <td class="text-primary col-sm-4">
     {{genre}}
