--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -13,7 +13,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="/artists">Artists</a></li>
+          <li><a href="{{pathFor 'artists'}}">Artists</a></li>
           <li><a href="#">Albums</a></li>
           <li><a href="#">Songs</a></li>
         </ul>
