- Created the artist submission pages.
- Added the following packages to help with form validation:
  - check
  - audit-argument-checks

- Added ability to create artists.
- Added ability to delete artists.

--- a/client/templates/artists/artist.html
+++ b/client/templates/artists/artist.html
@@ -6,7 +6,6 @@
     {{genre}}
   </td>
   <td style="text-align:right;" class="col-sm-2">
-    <a href="#"><span class="glyphicon glyphicon-pencil btn-sm" aria-hidden="true" ></span></a>
-    <a href="#"><span class="glyphicon glyphicon-remove btn-sm" aria-hidden="true" ></span></a>
+    <a href="#"><span class="glyphicon glyphicon-remove btn-sm delete" aria-hidden="true" value="{{_Id}}"></span></a>
   </td>
 </template>
