- Added default sort of artists. - Fixed bug with genre dropdown not auto-selecting from database.

--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -29,7 +29,7 @@
 
     <div class="starter-template">
       <h1>DevBootCamp</h1>
-      <p class="lead">DevBootCamp Code Challenge.</p>
+      <p class="lead">Code Challenge - created using Meteor.</p>
     </div>
   </div>
 
