--- a/client/templates/artists/artistEdit.html
+++ b/client/templates/artists/artistEdit.html
@@ -9,11 +9,11 @@
     </div>
 
     <div class="form-group col-xs-2">
-      <select name="artistGenre" class="form-control">
-        <option selected="selected">Select Genre</option>
-        <option>Country</option>
-        <option>Pop</option>
-        <option>Rock</option>
+      <select class="form-control" name="artistGenre" id="artistGenre">
+        <option {{selectedGenre "Select Genre"}}>Select Genre</option>
+        <option {{selectedGenre "Country"}}>Country</option>
+        <option {{selectedGenre "Pop"}}>Pop</option>
+        <option {{selectedGenre "Rock"}}>Rock</option>
       </select>
     </div>
 
