--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Recordly</a>
+        <a class="navbar-brand" href="/">DevBootCamp</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -28,8 +28,8 @@
   <div class="container">
 
     <div class="starter-template">
-      <h1>DevBootCamp</h1>
-      <p class="lead">Code Challenge - created using Meteor.</p>
+      <h1>Recordly</h1>
+      <p class="lead">Code Challenge - created by Gerald Bailey using Meteor.</p>
     </div>
   </div>
 
